# telegram-monitoring

./: .gitignore  LICENSE  README.md  README_zh.md  SECURITY.md  client.py  generate_token.py  main.py  prohibited_words.txt  pyproject.toml  requirements.txt
src/: config.py  i18n.py  log.py  socket_command.py  socket_route.py  sql.py  telegram.py
src/i18n/: zh_CN.yaml
telegram_monitoring/: __init__.py  __main__.py
telegram_monitoring/src/: __init__.py  config.py  i18n.py  log.py  socket_command.py  socket_route.py  sql.py  telegram.py
